# Minitorch-flash-attention

./: .gitignore  README.md  compile_cuda.sh  pyproject.toml  run.sh  setup.py  test_grad_flow.py
benchmarking/: benchmark_attention_image.py  benchmark_attention_seqlen.py  benchmark_basic_layers.py  benchmark_flash_attention.py  benchmark_flash_vs_vanilla.py  benchmark_models.py  benchmark_pytorch_layers.py  benchmark_vit.py  benchmark_vit_image.py  benchmark_vit_speedup.py
minitorch/: __init__.py  autodiff.py  bench_utils.py  cuda_kernel_ops.py  flash_attention_fn.py  flash_attention_ops.py  flash_transformer.py  modules_basic.py  nn.py  optim.py  tensor_functions.py  transformer.py
minitorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
project/: check_grads.py  run_image_classification.py  run_sentiment_linear.py
src/: combine.cu  flash_attention.cu  flash_attention_backward.cu  flash_attention_forward.cu
tests/: test_flash_attention.py  test_tensor_general.py
vit_minitorch/minitorch/: transformer.py
vit_minitorch/minitorch.egg-info/: SOURCES.txt
vit_minitorch/project/: run_machine_translation.py
workdir_vocab10000_lr0.002_embd256/: tokenizer.json
